--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ use-site-title: true
 **Spotlight Paper:** Di Carlo, V., Bianchi, F. & Palmonari, M. (2019). Training Temporal Word Embeddings with a Compass. AAAI.
 
 {: .box-note}
-**Last Accpeted Paper:** Vimercati M., Bianchi, F., Soto, M., & Palmonari, M. (2019). Mapping Lexical Knowledge to Distributed Representations for Ontology Concept Invention. In AIXIA.
+**Last Accepted Paper:** Vimercati M., Bianchi, F., Soto, M., & Palmonari, M. (2019). Mapping Lexical Knowledge to Distributed Representations for Ontology Concept Invention. In AIXIA.
 
 <div class="posts-list">
   {% for post in paginator.posts %}
