--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@ title: AIR and R
 subtitle: Working Group on Artificial Intelligence, Learning Representation  and Reasoning
 use-site-title: true
 ---
-{: .box-note}
-**Spotlight Paper:** Di Carlo, V., Bianchi, F. & Palmonari, M. (2019). Training Temporal Word Embeddings with a Compass. AAAI.
+<p class="box-note">
+  <strong>Spotlight Paper</strong> Di Carlo, V., Bianchi, F. & Palmonari, M. (2019). **Training Temporal Word Embeddings with a Compass.** AAAI. <a href="https://aaai.org/ojs/index.php/AAAI/article/view/4594">Link</a>
+</p>
 
-{: .box-note}
-**Last Accepted Paper:** Vimercati M., Bianchi, F., Soto, M., & Palmonari, M. (2019). Mapping Lexical Knowledge to Distributed Representations for Ontology Concept Invention. In AIXIA.
+<p class="box-warning">
+  <strong>Last Accepted Paper</strong> Vimercati M., Bianchi, F., Soto, M., & Palmonari, M. (2019). Mapping Lexical Knowledge to Distributed Representations for Ontology Concept Invention. In AIXIA (to appear).
+</p>
 
 <div class="posts-list">
   {% for post in paginator.posts %}
