fixed index page

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ subtitle: Working Group on Artificial Intelligence, Learning Representation  and
 use-site-title: true
 ---
 <p class="box-note">
-  <strong>Spotlight Paper</strong> Di Carlo, V., Bianchi, F. & Palmonari, M. (2019). **Training Temporal Word Embeddings with a Compass.** AAAI. <a href="https://aaai.org/ojs/index.php/AAAI/article/view/4594">Link</a>
+  <strong>Spotlight Paper:</strong> Di Carlo, V., Bianchi, F. & Palmonari, M. (2019). <strong>Training Temporal Word Embeddings with a Compass.</strong> AAAI. <a href="https://aaai.org/ojs/index.php/AAAI/article/view/4594">Link</a>
 </p>
 
 <p class="box-warning">
-  <strong>Last Accepted Paper</strong> Vimercati M., Bianchi, F., Soto, M., & Palmonari, M. (2019). Mapping Lexical Knowledge to Distributed Representations for Ontology Concept Invention. In AIXIA (to appear).
+  <strong>Last Accepted Paper:</strong> Vimercati M., Bianchi, F., Soto, M., & Palmonari, M. (2019). <strong>Mapping Lexical Knowledge to Distributed Representations for Ontology Concept Invention.</strong> In AIXIA (to appear).
 </p>
 
 <div class="posts-list">
