--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: AIR and R
-subtitle: Working Group on Artificial Intelligence, Learning Representation and Reasoning
+title: RAIR
+subtitle: Working Group on Artificial Intelligence, Learning Representations and Reasoning
 use-site-title: true
 ---
 <p class="box-note">
