--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: RAIR
+title: AIR AI
 subtitle: Working Group on Artificial Intelligence, Learning Representations and Reasoning
 use-site-title: true
 ---
